# full-history-search

./: .gitignore  ChangeLog.md  README.md  create.sql  full-history-search.cabal  full-history-search.service
client-qt/: CMakeLists.txt  htmldelegate.cpp  htmldelegate.h  mainwindow.cpp  mainwindow.h
ext/: gettext.js  manifest.json
server/: Main.hs
src/Search/: Insert.hs  Search.hs  Types.hs
